--- a/docs/packagePages.css
+++ b/docs/packagePages.css
@@ -3194,7 +3194,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 15px;
   text-align: left;
-  background-color: #ebfbfb;
+  background-color: rgba(235, 251, 251, 0.92);
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 3px;
@@ -3571,7 +3571,8 @@ tbody.collapse.in {
     .nav > li > a {
       position: relative;
       display: block;
-      padding: 10px 15px; }
+      padding: 10px 15px;
+      border-color: #9dd; }
       .nav > li > a:hover, .nav > li > a:focus {
         text-decoration: none; }
     .nav > li.disabled > a {
@@ -3963,10 +3964,11 @@ tbody.collapse.in {
   .navbar-default .navbar-text {
     color: #bbb; }
   .navbar-default .navbar-nav > li > a {
-    color: #444; }
+    color: #444;
+    padding-top: 5px;
+    margin-top: 5px; }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
       color: #222;
-      border: #f5f5f5
       background-color: transparent; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #212121;
@@ -3990,7 +3992,9 @@ tbody.collapse.in {
     border-right: 1px solid #bdd;
     border-top: 1px solid #bdd;
     border-radius: 5px 5px 0px 0px;
-    padding-bottom: 6px;}
+    padding-bottom: 6px;
+    padding-top: 5px;
+    margin-top: 5px; }
   @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
       color: #444; }
@@ -6414,11 +6418,10 @@ input[type="checkbox"],
 
 .dropdown-menu {
   margin-top: 0;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
   border-right: 1px solid #bdd;
   border-left: 1px solid #bdd;
-  border-bottom: 1px solid #bdd; }
+  border-bottom: 1px solid #bdd;
+  border-top: transparent; }
 
 .alert {
   border: none;
